--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,13 +9,13 @@ server {
     }
 
     location /api {
-        resolver 127.0.0.11 valid=30s;
-        set $backend "http://ukk88wkgssskk04o0w4wkogo:4000";
+        resolver 8.8.8.8 valid=30s;
+        set $backend "http://ukk88wkgssskk04o0w4wkogo.46.225.26.104.sslip.io";
         proxy_pass $backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
+        proxy_set_header Host ukk88wkgssskk04o0w4wkogo.46.225.26.104.sslip.io;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
