--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,9 +9,7 @@ server {
     }
 
     location /api {
-        resolver 8.8.8.8 valid=30s;
-        set $backend "http://ukk88wkgssskk04o0w4wkogo.46.225.26.104.sslip.io";
-        proxy_pass $backend;
+        proxy_pass http://46.225.26.104:80;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
